--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        compose_version = '1.4.2'
+        retrofit_version = '2.9.0'
+        room_version = '2.5.1'
+        hilt_version = '2.44'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
