--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,20 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9'
+}
+
+kotlin {
+    sourceSets {
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+
+        release {
+            kotlin.srcDir("build/generated/ksp/release/kotlin")
+        }
+    }
 }
 
 kapt {
@@ -124,4 +138,8 @@ dependencies {
 
     // timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // compose navigation
+    implementation 'io.github.raamcosta.compose-destinations:core:1.8.41-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.41-beta'
 }
