--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,4 +142,7 @@ dependencies {
     // compose navigation
     implementation 'io.github.raamcosta.compose-destinations:core:1.8.41-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.41-beta'
+
+    // flow
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
